fix:main page's gap

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -588,8 +588,8 @@ video {
   justify-content: center;
 }
 
-.gap-2 {
-  gap: 0.5rem;
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .gap-8 {
